--- a/world/app/view/guests/index.html.erb
+++ b/world/app/view/guests/index.html.erb
@@ -1,1 +1,73 @@
-Hello world Guests Index
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Guest_books</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</head>
+<body>
+<div class="container">
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th>Nick(Email)</th>
+    <th>Text</th>
+    <th>Created_at</th>
+    <th>ip</th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @guest_books.each do |guest| %>
+      <tr>
+        <td><%= guest.nick %>(<%= guest.email %>)</td>
+        <td><%= guest.text %></td>
+        <td><%= guest.created_human_at %></td>
+        <td><%= guest.ip %></td>
+      </tr>
+  <% end %>
+  </tbody>
+
+</table>
+
+
+<form class="form-horizontal" action="/create_message" method="post">
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+    <div class="col-sm-10">
+      <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="Email">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">Nick</label>
+    <div class="col-sm-10">
+      <input type="text" name="nick" class="form-control" id="inputPassword3" placeholder="Nick">
+    </div>
+  </div>
+
+
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">Message</label>
+    <div class="col-sm-10">
+      <input type="text" name="text" class="form-control" id="inputPassword3" placeholder="Message">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">send</button>
+    </div>
+  </div>
+</form>
+
+</div>
+</body>
+</html>
