--- a/world/app/view/guests/index.html.erb
+++ b/world/app/view/guests/index.html.erb
@@ -39,7 +39,7 @@
 </table>
 
 
-<form class="form-horizontal" action="/create_message" method="post">
+<form class="form-horizontal" action="/guests" method="post">
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
     <div class="col-sm-10">
