--- a/world/app/view/guests/index.html.erb
+++ b/world/app/view/guests/index.html.erb
@@ -16,61 +16,74 @@
 </head>
 <body>
 <div class="container">
-<table class="table table-striped">
-  <thead>
-  <tr>
-    <th>Nick(Email)</th>
-    <th>Text</th>
-    <th>Created_at</th>
-    <th>ip</th>
-    <th>delete</th>
-  </tr>
-  </thead>
-  <tbody>
-  <% @guest_books.each do |guest| %>
-      <tr>
-        <td><%= guest.nick %>(<%= guest.email %>)</td>
-        <td><%= guest.text %></td>
-        <td><%= guest.created_human_at %></td>
-        <td><%= guest.ip %></td>
-        <td>
-          <a  class = "btn btn-warning"href="/guests/<%=guest.id%>/delete">Delete</a>
-        </td>
-      </tr>
-  <% end %>
-  </tbody>
 
-</table>
-
-
-<form class="form-horizontal" action="/guests" method="post">
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
-      <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="Email">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Nick</label>
-    <div class="col-sm-10">
-      <input type="text" name="nick" class="form-control" id="inputPassword3" placeholder="Nick">
+  <div class="row">
+    <div class="col-sm-5 pull-right">
+      <form class="form-inline" action="/guests" method="get">
+        <div class="form-group">
+          <label for="nick">Nick</label>
+          <input type="text" class="form-control" id="nick" name="nick" value="<%= params[:nick] %>" placeholder="Nick">
+        </div>
+        <button type="submit" class="btn btn-default">Search</button>
+      </form>
     </div>
   </div>
 
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th>Nick(Email)</th>
+      <th>Text</th>
+      <th>Created_at</th>
+      <th>ip</th>
+      <th>delete</th>
+    </tr>
+    </thead>
+    <tbody>
+    <% @guest_books.each do |guest| %>
+        <tr>
+          <td><%= guest.nick %>(<%= guest.email %>)</td>
+          <td><%= guest.text %></td>
+          <td><%= guest.created_human_at %></td>
+          <td><%= guest.ip %></td>
+          <td>
+            <a class="btn btn-warning" href="/guests/<%= guest.id %>/delete">Delete</a>
+          </td>
+        </tr>
+    <% end %>
+    </tbody>
 
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Message</label>
-    <div class="col-sm-10">
-      <input type="text" name="text" class="form-control" id="inputPassword3" placeholder="Message">
-    </div>
-  </div>
+  </table>
 
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">send</button>
+
+  <form class="form-horizontal" action="/guests" method="post">
+    <div class="form-group">
+      <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+      <div class="col-sm-10">
+        <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="Email">
+      </div>
     </div>
-  </div>
-</form>
+    <div class="form-group">
+      <label for="inputPassword3" class="col-sm-2 control-label">Nick</label>
+      <div class="col-sm-10">
+        <input type="text" name="nick" class="form-control" id="inputPassword3" placeholder="Nick">
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <label for="inputPassword3" class="col-sm-2 control-label">Message</label>
+      <div class="col-sm-10">
+        <input type="text" name="text" class="form-control" id="inputPassword3" placeholder="Message">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">send</button>
+      </div>
+    </div>
+  </form>
 
 </div>
 </body>
