fix delete  method add new method

--- a/world/app/view/guests/show.html.erb
+++ b/world/app/view/guests/show.html.erb
@@ -30,7 +30,7 @@
 
 
 <form action="/guests/<%= @guest.id %>/delete" method="post">
-  <input type="hidden" name="_method" value="delete">
+ <!-- <input type="hidden" name="_method" value="delete">-->
   <input class="btn btn-warning" type="submit" value="Delete">
 </form>
 
