--- a/world/app/view/guests/edit.html.erb
+++ b/world/app/view/guests/edit.html.erb
@@ -20,7 +20,13 @@
 
 <div class="container">
 
-  <form action="/guests/<%= @guest.id %>/update" method="post">
+  <form
+  <% if @guest.created? %>
+  action="/guests/<%= @guest.id %>/update"
+  <% else %>
+  action="/guests"
+  <% end %>
+  method="post">
     <div class="form-group">
       <label for="email">Email address</label>
       <input type="email" class="form-control" name="email" value="<%= @guest.email %>" placeholder="Email">
@@ -33,7 +39,12 @@
       <label for="text">text</label>
       <input type="text" class="form-control" name="text" value="<%= @guest.text %>" placeholder="text">
     </div>
-    <button type="submit" class="btn btn-default">update</button>
+
+    <% if @guest.created? %>
+        <button type="submit" class="btn btn-default">update</button>
+    <% else %>
+        <button type="submit" class="btn btn-default">create</button>
+    <% end %>
   </form>
 
   <a href="/guests/<%= @guest.id %>" class="btn btn-default">cancel</a>
