--- a/world/app/view/guests/index.html.erb
+++ b/world/app/view/guests/index.html.erb
@@ -50,7 +50,7 @@
           <td><%= guest.ip %></td>
           <td>
             <form action="/guests/<%=guest.id %>/delete" method="post">
-              <input type="hidden" name="_method" value="delete">
+<!--              <input type="hidden" name="_method" value="delete">-->
               <input class="btn btn-warning" type="submit" value="Delete">
             </form>
           </td>
@@ -61,7 +61,7 @@
   </table>
 
 
-  <form class="form-horizontal" action="/guests" method="post">
+<!--  <form class="form-horizontal" action="/guests" method="post">
     <div class="form-group">
       <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
       <div class="col-sm-10">
@@ -88,8 +88,9 @@
         <button type="submit" class="btn btn-default">send</button>
       </div>
     </div>
-  </form>
+  </form>-->
 
+  <a href="/guests/new" class="btn btn-primary">new</a>
 </div>
 </body>
 </html>
