--- a/world/app/view/guests/index.html.erb
+++ b/world/app/view/guests/index.html.erb
@@ -16,7 +16,9 @@
 </head>
 <body>
 <div class="container">
-
+  <% if current_user %>
+      Hello, <%= current_user.nick %>
+  <% end %>
   <div class="row">
     <div class="col-sm-5 pull-right">
       <form class="form-inline" action="/guests" method="get">
@@ -43,14 +45,15 @@
     <% @guest_books.each do |guest| %>
         <tr>
           <td>
-            <a href="/guests/<%= guest.id%>"><%= guest.nick %></a>
-            (<%= guest.email %>)</td>
+            <a href="/guests/<%= guest.id %>"><%= guest.nick %></a>
+            (<%= guest.email %>)
+          </td>
           <td><%= guest.text %></td>
           <td><%= guest.created_human_at %></td>
           <td><%= guest.ip %></td>
           <td>
-            <form action="/guests/<%=guest.id %>/delete" method="post">
-<!--              <input type="hidden" name="_method" value="delete">-->
+            <form action="/guests/<%= guest.id %>/delete" method="post">
+              <!--              <input type="hidden" name="_method" value="delete">-->
               <input class="btn btn-warning" type="submit" value="Delete">
             </form>
           </td>
@@ -60,37 +63,13 @@
 
   </table>
 
-
-<!--  <form class="form-horizontal" action="/guests" method="post">
-    <div class="form-group">
-      <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-      <div class="col-sm-10">
-        <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="Email">
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="inputPassword3" class="col-sm-2 control-label">Nick</label>
-      <div class="col-sm-10">
-        <input type="text" name="nick" class="form-control" id="inputPassword3" placeholder="Nick">
-      </div>
-    </div>
-
-
-    <div class="form-group">
-      <label for="inputPassword3" class="col-sm-2 control-label">Message</label>
-      <div class="col-sm-10">
-        <input type="text" name="text" class="form-control" id="inputPassword3" placeholder="Message">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">send</button>
-      </div>
-    </div>
-  </form>-->
-
-  <a href="/guests/new" class="btn btn-primary">new</a>
+  <% if current_user %>
+      <a href="/guests/new" class="btn btn-primary">New</a>
+      <a href="/logout" class="btn btn-primary">Logout</a>
+  <% else %>
+      <a href="/users/new" class="btn btn-primary">Register</a>
+      <a href="/login" class="btn btn-primary">Login</a>
+  <% end %>
 </div>
 </body>
 </html>
