--- a/world/app/view/guests/index.html.erb
+++ b/world/app/view/guests/index.html.erb
@@ -1,75 +1,56 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Guest_books</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</head>
-<body>
-<div class="container">
-  <% if current_user %>
-      Hello, <%= current_user.nick %>
-  <% end %>
-  <div class="row">
-    <div class="col-sm-5 pull-right">
-      <form class="form-inline" action="/guests" method="get">
-        <div class="form-group">
-          <label for="nick">Nick</label>
-          <input type="text" class="form-control" id="nick" name="nick" value="<%= params[:nick] %>" placeholder="Nick">
-        </div>
-        <button type="submit" class="btn btn-default">Search</button>
-      </form>
-    </div>
+<%= render_partial(:header) %>
+<% if current_user %>
+    Hello, <%= current_user.nick %>
+<% end %>
+<div class="row">
+  <div class="col-sm-5 pull-right">
+    <form class="form-inline" action="/guests" method="get">
+      <div class="form-group">
+        <label for="nick">Nick</label>
+        <input type="text" class="form-control" id="nick" name="nick" value="<%= params[:nick] %>" placeholder="Nick">
+      </div>
+      <button type="submit" class="btn btn-default">Search</button>
+    </form>
   </div>
-
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      <th>Nick(Email)</th>
-      <th>Text</th>
-      <th>Created_at</th>
-      <th>ip</th>
-      <th>delete</th>
-    </tr>
-    </thead>
-    <tbody>
-    <% @guest_books.each do |guest| %>
-        <tr>
-          <td>
-            <a href="/guests/<%= guest.id %>"><%= guest.nick %></a>
-            (<%= guest.email %>)
-          </td>
-          <td><%= guest.text %></td>
-          <td><%= guest.created_human_at %></td>
-          <td><%= guest.ip %></td>
-          <td>
-            <form action="/guests/<%= guest.id %>/delete" method="post">
-              <!--              <input type="hidden" name="_method" value="delete">-->
-              <input class="btn btn-warning" type="submit" value="Delete">
-            </form>
-          </td>
-        </tr>
-    <% end %>
-    </tbody>
-
-  </table>
-
-  <% if current_user %>
-      <a href="/guests/new" class="btn btn-primary">New</a>
-      <a href="/logout" class="btn btn-primary">Logout</a>
-  <% else %>
-      <a href="/users/new" class="btn btn-primary">Register</a>
-      <a href="/login" class="btn btn-primary">Login</a>
-  <% end %>
 </div>
-</body>
-</html>
+
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th>Nick(Email)</th>
+    <th>Text</th>
+    <th>Created_at</th>
+    <th>ip</th>
+    <th>delete</th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @guest_books.each do |guest| %>
+      <tr>
+        <td>
+          <a href="/guests/<%= guest.id %>"><%= guest.nick %></a>
+          (<%= guest.email %>)
+        </td>
+        <td><%= guest.text %></td>
+        <td><%= guest.created_human_at %></td>
+        <td><%= guest.ip %></td>
+        <td>
+          <form action="/guests/<%= guest.id %>/delete" method="post">
+            <!--              <input type="hidden" name="_method" value="delete">-->
+            <input class="btn btn-warning" type="submit" value="Delete">
+          </form>
+        </td>
+      </tr>
+  <% end %>
+  </tbody>
+
+</table>
+
+<% if current_user %>
+    <a href="/guests/new" class="btn btn-primary">New</a>
+    <a href="/logout" class="btn btn-primary">Logout</a>
+<% else %>
+    <a href="/users/new" class="btn btn-primary">Register</a>
+    <a href="/login" class="btn btn-primary">Login</a>
+<% end %>
+
