--- a/world/app/view/guests/index.html.erb
+++ b/world/app/view/guests/index.html.erb
@@ -1,7 +1,11 @@
 <%= render_partial(:header) %>
 <% if current_user %>
     Hello, <%= current_user.nick %>
+    <% if current_user.exist_avatar? %>
+        <img src="<%= current_user.avatar_path %>" width="100px" height="100px" alt="avatar">
+    <% end %>
 <% end %>
+
 <div class="row">
   <div class="col-sm-5 pull-right">
     <form class="form-inline" action="/guests" method="get">
@@ -48,7 +52,8 @@
 
 <% if current_user %>
     <a href="/guests/new" class="btn btn-primary">New</a>
-    <a href="/logout" class="btn btn-primary">Logout</a>
+    <a href="/profile" class="btn btn-primary">My Account</a>
+    <a href="/users/logout" class="btn btn-primary">Logout</a>
 <% else %>
     <a href="/users/new" class="btn btn-primary">Register</a>
     <a href="/login" class="btn btn-primary">Login</a>
